--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>about</title>
     <style>   
         body {
             background: #d3d3d3; 
@@ -28,12 +28,9 @@
         .logo {
             height: 50px;
             width: 50px;
-            background-color: rgb(59, 192, 225);
-            display: flex;
             justify-content: center;
             align-items: center;
             border-radius: 50%;
-            color: white;
             font-weight: bold;
             font-size: 20px;
         }
@@ -107,11 +104,13 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <div class="logo">L</div>
+            <div class="logo" >
+                <img class="logo" src="https://upload.wikimedia.org/wikipedia/tr/b/ba/%C3%9Csk%C3%BCdar_%C3%9Cniversitesi_logo.png?20220620000225" alt="Description of Image">
+            </div>
             <div class="company-name">Welcome</div>
         </div>
         <nav class="nav">
-            <a href="home.html">Home</a>
+            <!-- <a href="home.html">Home</a> -->
             <a href="users.html">Students</a>
             <a href="about.html">About</a>
             <a href="index.html"  style="color: red;">Logout</a>
