--- a/home.html
+++ b/home.html
@@ -75,11 +75,13 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <div class="logo">L</div>
+            <div class="logo" >
+                <img class="logo" src="https://upload.wikimedia.org/wikipedia/tr/b/ba/%C3%9Csk%C3%BCdar_%C3%9Cniversitesi_logo.png?20220620000225" alt="Description of Image">
+            </div>
             <div class="company-name">Welcome</div>
         </div>
         <nav class="nav">
-            <a href="home.html">Home</a>
+            <!-- <a href="home.html">Home</a> -->
             <a href="users.html">Students</a>
             <a href="about.html">About</a>
             <a href="index.html"  style="color: red;">Logout</a>
