--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
         function redirectToHome() {
             // You can perform your login validation here (if needed)
             // If login is successful, redirect to home page
-            window.location.href = "home.html";  // Redirect to home page
+            window.location.href = "users.html";  // Redirect to home page
             return false;  // Prevent form submission (if you need to handle login first)
         }
     </script>
