--- a/users.html
+++ b/users.html
@@ -132,11 +132,13 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <div class="logo">L</div>
+            <div class="logo" >
+                <img class="logo" src="https://upload.wikimedia.org/wikipedia/tr/b/ba/%C3%9Csk%C3%BCdar_%C3%9Cniversitesi_logo.png?20220620000225" alt="Description of Image">
+            </div>
             <div class="company-name">Welcome</div>
         </div>
         <nav class="nav">
-            <a href="home.html">Home</a>
+            <!-- <a href="home.html">Home</a> -->
             <a href="users.html">Students</a>
             <a href="about.html">About</a>
             <a href="index.html" style="color: red;">Logout</a>
@@ -177,6 +179,55 @@
                 <td>3</td>
                 <td>mustafa</td>
                 <td>mustafa@gmail.com</td>
+                <td><a href="users.html">Delete</a></td>
+                <td><a href="edit.html">Update</a></td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>jad</td>
+                <td>jad@gmail.com</td>
+                <td><a href="users.html">Delete</a></td>
+                <td><a href="edit.html">Update</a></td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>mraiam</td>
+                <td>mraiam@gmail.com</td>
+                <td><a href="users.html">Delete</a></td>
+                <td><a href="edit.html">Update</a></td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>jean</td>
+                <td>jean@gmail.com</td>
+                <td><a href="users.html">Delete</a></td>
+                <td><a href="edit.html">Update</a></td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>sara</td>
+                <td>sara@gmail.com</td>
+                <td><a href="users.html">Delete</a></td>
+                <td><a href="edit.html">Update</a></td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>meem</td>
+                <td>meem@gmail.com</td>
+                <td><a href="users.html">Delete</a></td>
+                <td><a href="edit.html">Update</a></td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>laana</td>
+                <td>laana@gmail.com</td>
+                <td><a href="users.html">Delete</a></td>
+                <td><a href="edit.html">Update</a></td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>neaila</td>
+                <td>neaila@gmail.com</td>
                 <td><a href="users.html">Delete</a></td>
                 <td><a href="edit.html">Update</a></td>
             </tr>
