--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>   
         body {
-            background: #d3d3d3; 
+            background: #f4f4f9; 
             margin: 0;
             font-family: Arial, sans-serif;
         }
