--- a/users.html
+++ b/users.html
@@ -6,7 +6,7 @@
     <title>Students Page</title>
     <style>   
         body {
-            background: #d3d3d3; 
+            background:  #f4f4f9; 
             margin: 0;
             font-family: Arial, sans-serif;
         }
@@ -166,70 +166,70 @@
                 <td>safa</td>
                 <td>safa@gmail.com</td>
                 <td><a href="users.html">Delete</a></td>
-                <td><a href="edit.html">Update</a></td>
+                <td><a href="edit.html">Edit</a></td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>lin</td>
                 <td>lin@gmail.com</td>
                 <td><a href="users.html">Delete</a></td>
-                <td><a href="edit.html">Update</a></td>
+                <td><a href="edit.html">Edit</a></td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>mustafa</td>
                 <td>mustafa@gmail.com</td>
                 <td><a href="users.html">Delete</a></td>
-                <td><a href="edit.html">Update</a></td>
+                <td><a href="edit.html">Edit</a></td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>jad</td>
                 <td>jad@gmail.com</td>
                 <td><a href="users.html">Delete</a></td>
-                <td><a href="edit.html">Update</a></td>
+                <td><a href="edit.html">Edit</a></td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>mraiam</td>
                 <td>mraiam@gmail.com</td>
                 <td><a href="users.html">Delete</a></td>
-                <td><a href="edit.html">Update</a></td>
+                <td><a href="edit.html">Edit</a></td>
             </tr>
             <tr>
                 <td>6</td>
                 <td>jean</td>
                 <td>jean@gmail.com</td>
                 <td><a href="users.html">Delete</a></td>
-                <td><a href="edit.html">Update</a></td>
+                <td><a href="edit.html">Edit</a></td>
             </tr>
             <tr>
                 <td>7</td>
                 <td>sara</td>
                 <td>sara@gmail.com</td>
                 <td><a href="users.html">Delete</a></td>
-                <td><a href="edit.html">Update</a></td>
+                <td><a href="edit.html">Edit</a></td>
             </tr>
             <tr>
                 <td>8</td>
                 <td>meem</td>
                 <td>meem@gmail.com</td>
                 <td><a href="users.html">Delete</a></td>
-                <td><a href="edit.html">Update</a></td>
+                <td><a href="edit.html">Edit</a></td>
             </tr>
             <tr>
                 <td>9</td>
                 <td>laana</td>
                 <td>laana@gmail.com</td>
                 <td><a href="users.html">Delete</a></td>
-                <td><a href="edit.html">Update</a></td>
+                <td><a href="edit.html">Edit</a></td>
             </tr>
             <tr>
                 <td>10</td>
                 <td>neaila</td>
                 <td>neaila@gmail.com</td>
                 <td><a href="users.html">Delete</a></td>
-                <td><a href="edit.html">Update</a></td>
+                <td><a href="edit.html">Edit</a></td>
             </tr>
             </tbody>
         </table>
