--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>about</title>
     <style>   
         body {
-            background: #d3d3d3; 
+            background: # #f4f4f9; 
             margin: 0;
             font-family: Arial, sans-serif;
         }
