--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         body {
             font-family: 'Almarai', sans-serif;
-            background-color: #d3d3d3;
+            background-color:  #f4f4f9;
             margin: 0;
             padding: 0;
             display: flex;
