--- a/create.html
+++ b/create.html
@@ -18,7 +18,7 @@
 
         .form-container {
             background: white;
-            padding: 30px;
+            padding: 30px 30px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             width: 400px;
@@ -42,14 +42,14 @@
 
         .form-container input {
             width: 100%;
-            padding: 10px;
+            padding: 10px 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
 
         .form-container button {
-            width: 100%;
-            padding: 10px;
+            width: 105%;
+            padding: 10px 10px;
             background-color: green;
             color: white;
             border: none;
@@ -93,7 +93,9 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" placeholder="Enter password" required>
             </div>
-            <button type="submit">Add User</button>
+            <div class="">
+            <button type="submit">Add Student</button>
+            </div>
         </form>
         <div class="back-link">
             <a href="users.html">Back to Students Page</a>
