--- a/edit.html
+++ b/edit.html
@@ -13,12 +13,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 100vh;/*100% of vp hight*/
         }
 
         .form-container {
             background: white;
-            padding: 30px;
+            padding: 30px 30px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             width: 400px;
@@ -35,7 +35,7 @@
         }
 
         .form-container label {
-            display: block;
+            display: block;/*alone item*/
             margin-bottom: 5px;
             font-weight: bold;
         }
@@ -48,8 +48,8 @@
         }
 
         .form-container button {
-            width: 100%;
-            padding: 10px;
+            width: 105%;
+            padding: 10px ;
             background-color: green;
             color: white;
             border: none;
