--- a/create.html
+++ b/create.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add New User</title>
+    <title>Add New Student</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -46,6 +46,12 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
+        .form-container select {
+            width: 105%;
+            padding: 10px 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
 
         .form-container button {
             width: 105%;
@@ -80,7 +86,7 @@
 <body>
     <div class="form-container">
         <h1>Add New Student</h1>
-        <form action="add-user-handler.php" method="post">
+        <form id="studentForm">
             <div class="input-box">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" placeholder="Enter name" required>
@@ -90,16 +96,61 @@
                 <input type="email" id="email" name="email" placeholder="Enter email" required>
             </div>
             <div class="input-box">
+                <label for="department">Department:</label>
+                <select id="department" name="department">
+                    <option value="">Select department</option>
+                    <option value="Computer Science">Computer Science</option>
+                    <option value="Engineering">Engineering</option>
+                    <option value="Business">Business</option>
+                    <option value="Arts">Arts</option>
+                </select>
+            </div>
+            <div class="input-box">
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" placeholder="Enter password" required>
             </div>
-            <div class="">
             <button type="submit">Add Student</button>
-            </div>
         </form>
         <div class="back-link">
             <a href="users.html">Back to Students Page</a>
         </div>
     </div>
+
+    <script>
+        document.getElementById('studentForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the default form submission
+
+            // Gather form data
+            const formData = {
+                name: document.getElementById('name').value,
+                email: document.getElementById('email').value,
+                department: document.getElementById('department').value,
+                password: document.getElementById('password').value,
+            };
+
+            // Send data to the API
+            fetch('api.php?action=createStudent', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(formData),
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.status === 'success') {
+                    // Redirect to the home page
+                    window.location.href = 'users.html';
+                } else {
+                    alert('Error: ' + data.message);
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('An error occurred while adding the student.');
+            });
+        });
+    </script>
 </body>
+
 </html>
