--- a/create.html
+++ b/create.html
@@ -103,6 +103,7 @@
                     <option value="Engineering">Engineering</option>
                     <option value="Business">Business</option>
                     <option value="Arts">Arts</option>
+                    <option value="Sciences">Sciences</option>
                 </select>
             </div>
             <div class="input-box">
