--- a/studentlogin.html
+++ b/studentlogin.html
@@ -21,7 +21,7 @@
         </div>
         
         <form id="loginForm" method="post">
-            <input type="text" name="id" id="id" placeholder="ID" required>
+            <input type="number" name="id" id="id" placeholder="ID" required>
             <input type="text" name="name" id="name" placeholder="Username" required>
             <input type="password" name="password" id="password" placeholder="Password" required>
             <button type="submit" name="buttonsubmit">Login</button>
